force-app/main/default/objects/Project__c/fields/AbacusProjectAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectAbbreviation__c</fullName>
    <formula>CASE( ProjectStatus__c , 
&quot;Open&quot;, &quot;Open&quot;, 
&quot;Partially open (w/o Time Entry)&quot;,&quot;Open&quot;,
&quot;Closed&quot; ,&quot;Closed&quot;,
&quot;undefined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Project Abbreviation</label>
    <type>Text</type>
</CustomField>