force-app/main/default/objects/Project__c/fields/AbacusProjectName__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectName__c</fullName>
    <formula>IF( ProjectType__c =&quot;Internal&quot;,&quot;IN-&quot;&amp; Name ,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Project Name</label>
    <type>Text</type>
</CustomField>