force-app/main/default/objects/Project__c/fields/AbacusProjectNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectNr__c</fullName>
    <formula>RIGHT( ProjectNr__c ,6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Project Nr.</label>
    <type>Text</type>
</CustomField>