force-app/main/default/objects/Project__c/fields/AbacusProjectResponsibleBusiness__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectResponsibleBusiness__c</fullName>
    <description>ary: Feld wird nur für die Übertragung an die Abacus Schnittstelle (Projekt) verwendet.</description>
    <formula>LEFT( ProjectResponsibleBusiness__r.FirstName &amp;&quot; &quot; &amp; ProjectResponsibleBusiness__r.LastName,60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Project Responsible - (Business)</label>
    <type>Text</type>
</CustomField>