force-app/main/default/objects/Project__c/fields/AbacusProjectType__c.field-meta.xml
<CustomField>
    <fullName>AbacusProjectType__c</fullName>
    <formula>IF( ProjectType__c =&quot;Internal&quot;,2,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Project Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>