force-app/main/default/objects/Project__c/fields/AbacusResponsible__c.field-meta.xml
<CustomField>
    <fullName>AbacusResponsible__c</fullName>
    <description>Dieses Feld wird mit der Projektschnittstelle an Abacus übergeben.</description>
    <formula>ContractPartner__r.AbacusAccountNr__c  &amp;&quot; - &quot;&amp;LEFT( ContractPartner__r.Name ,50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Responsible</label>
    <type>Text</type>
</CustomField>