force-app/main/default/objects/Project__c/fields/AbacusSupplierCostImportDefault__c.field-meta.xml
<CustomField>
    <fullName>AbacusSupplierCostImportDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is selected for the interface to add supplier costs from Abacus to a Project.</inlineHelpText>
    <label>Abacus Supplier Cost Import Default</label>
    <type>Checkbox</type>
</CustomField>