force-app/main/default/objects/Project__c/fields/ANrPrintPlus__c.field-meta.xml
<CustomField>
    <fullName>ANrPrintPlus__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>A-Nr. PrintPlus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>