force-app/main/default/objects/Project__c/fields/AprForecast__c.field-meta.xml
<CustomField>
    <fullName>AprForecast__c</fullName>
    <label>Apr Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>