force-app/main/default/objects/Project__c/fields/auauaunr__c.field-meta.xml
<CustomField>
    <fullName>auauaunr__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <externalId>true</externalId>
    <label>auauaunr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>