force-app/main/default/objects/Project__c/fields/auauedat__c.field-meta.xml
<CustomField>
    <fullName>auauedat__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>auauedat</label>
    <type>Date</type>
</CustomField>