force-app/main/default/objects/Project__c/fields/auaustat__c.field-meta.xml
<CustomField>
    <fullName>auaustat__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>auaustat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>