force-app/main/default/objects/Project__c/fields/BillingDelivery__c.field-meta.xml
<CustomField>
    <fullName>BillingDelivery__c</fullName>
    <label>Billing Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>