force-app/main/default/objects/Project__c/fields/BillingModel__c.field-meta.xml
<CustomField>
    <fullName>BillingModel__c</fullName>
    <label>Billing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BillingModel</valueSetName>
    </valueSet>
</CustomField>