force-app/main/default/objects/Project__c/fields/BillingNotes__c.field-meta.xml
<CustomField>
    <fullName>BillingNotes__c</fullName>
    <inlineHelpText>Internal Information for the billing process.</inlineHelpText>
    <label>Billing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>