force-app/main/default/objects/Project__c/fields/BillingRatePercent__c.field-meta.xml
<CustomField>
    <fullName>BillingRatePercent__c</fullName>
    <formula>InvoiceTotalAmountCHF__c / ServicesTotalAmountCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Rate - %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>