force-app/main/default/objects/Project__c/fields/BillingViaCompany__c.field-meta.xml
<CustomField>
    <fullName>BillingViaCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Billing via (Company)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Invoicing via (Company))</relationshipLabel>
    <relationshipName>ProjectsInvoicingViaCompany</relationshipName>
    <type>Lookup</type>
</CustomField>