force-app/main/default/objects/Project__c/fields/BriefingDeBriefingNotes__c.field-meta.xml
<CustomField>
    <fullName>BriefingDeBriefingNotes__c</fullName>
    <label>Briefing / De-Briefing Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>