force-app/main/default/objects/Project__c/fields/BudgetAssignmentLight__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignmentLight__c</fullName>
    <description>22.08.2017, ary: Budget wird neu nur noch auf den Services verteilt und ins Projekt hochgerechnet. Auf dem Projekt wird kein Budget mehr zugewiesen. Von daher braucht es dieses Feld nicht mehr. Es kann gelegentlich gelöscht werden.</description>
    <formula>IF(
 BudgetAssignTotalAmount__c = BudgetQuoteTotalAmount__c , IMAGE(&quot;/resource/Icons/greenaccept.png&quot;, &quot;Budget assigned correctly&quot;),
IF(
 BudgetAssignTotalAmount__c &gt; BudgetQuoteTotalAmount__c ,IMAGE(&quot;/resource/Icons/reddialogerror.png&quot;, &quot;Budget assigned false - too high&quot;),
IMAGE(&quot;/resource/Icons/yellowerror.png&quot;, &quot;Budget assigned false - too low&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assignment - Light</label>
    <type>Text</type>
</CustomField>