force-app/main/default/objects/Project__c/fields/BudgetAssignTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalAmount__c</fullName>
    <formula>BudgetAssignTotalExpense__c + BudgetAssignTotalTime__c+ BudgetAssignTotalSupplierCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>