force-app/main/default/objects/Project__c/fields/BudgetAssignTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalAmountCHF__c</fullName>
    <formula>BudgetAssignTotalExpenseCHF__c + BudgetAssignTotalTimeCHF__c+ BudgetAssignTotalSupCostsCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>