force-app/main/default/objects/Project__c/fields/BudgetAssignTotalExpense__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalExpense__c</fullName>
    <label>Budget Assign - Total Expense</label>
    <summarizedField>Package__c.BudgetAssignTotalExpense__c</summarizedField>
    <summaryFilterItems>
        <field>Package__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Expense</value>
    </summaryFilterItems>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>