force-app/main/default/objects/Project__c/fields/BudgetAssignTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalExpenseCHF__c</fullName>
    <formula>BudgetAssignTotalExpense__c *  CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Expense (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>