force-app/main/default/objects/Project__c/fields/BudgetAssignTotalSupCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalSupCostsCHF__c</fullName>
    <formula>BudgetAssignTotalSupplierCosts__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Sup Costs (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>