force-app/main/default/objects/Project__c/fields/BudgetAssignTotalSupplierCosts__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalSupplierCosts__c</fullName>
    <label>Budget Assign - Total Supplier Costs</label>
    <summarizedField>Package__c.BudgetAssignTotalSupplierCosts__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>