force-app/main/default/objects/Project__c/fields/BudgetAssignTotalTime__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalTime__c</fullName>
    <label>Budget Assign - Total Time</label>
    <summarizedField>Package__c.BudgetAssignTotalTime__c</summarizedField>
    <summaryFilterItems>
        <field>Package__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Time</value>
    </summaryFilterItems>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>