force-app/main/default/objects/Project__c/fields/BudgetAssignTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetAssignTotalTimeCHF__c</fullName>
    <formula>BudgetAssignTotalTime__c * CurrencyRateToCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Assign - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>