force-app/main/default/objects/Project__c/fields/BudgetOpenForecastAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenForecastAmount__c</fullName>
    <formula>BudgetAssignTotalAmount__c - ServicesTotalAmount__c / CompletionRatePercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>