force-app/main/default/objects/Project__c/fields/BudgetOpenTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalExpenseCHF__c</fullName>
    <formula>BudgetAssignTotalExpenseCHF__c - ServicesTotalExpenseCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Expense (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>