force-app/main/default/objects/Project__c/fields/BudgetOpenTotalSupplierCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalSupplierCostsCHF__c</fullName>
    <formula>BudgetAssignTotalSupCostsCHF__c  - ServicesTotalSupplierCostsCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Supplier Costs (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>