force-app/main/default/objects/Project__c/fields/BudgetOpenTotalTime__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalTime__c</fullName>
    <formula>BudgetAssignTotalTime__c  - ServicesTotalTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>