force-app/main/default/objects/Project__c/fields/BudgetOpenTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>BudgetOpenTotalTimeCHF__c</fullName>
    <formula>BudgetAssignTotalTimeCHF__c - ServicesTotalTimeCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Open - Total Time (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>