force-app/main/default/objects/Project__c/fields/BudgetOverrunAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetOverrunAmount__c</fullName>
    <formula>BudgetQuoteTotalAmount__c - ServicesTotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Overrun - Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>