force-app/main/default/objects/Project__c/fields/BudgetQuoteTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>BudgetQuoteTotalAmount__c</fullName>
    <description>22.08.2017, ary: Budget wird neu nur noch auf den Services verteilt und ins Projekt hochgerechnet. Auf dem Projekt wird kein Budget mehr zugewiesen. Von daher braucht es dieses Feld nicht mehr. Es kann gelegentlich gelöscht werden.</description>
    <formula>BudgetQuoteTotalTime__c + BudgetQuoteTotalExpense__c + BudgetQuoteTotalSupplierCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Quote - Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>