force-app/main/default/objects/Project__c/fields/CompletionRatePercent__c.field-meta.xml
<CustomField>
    <fullName>CompletionRatePercent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completion Rate %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>