force-app/main/default/objects/Project__c/fields/ContractPartner__c.field-meta.xml
<CustomField>
    <fullName>ContractPartner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Summary Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectsContractPartner</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>