force-app/main/default/objects/Project__c/fields/ContractPartnerSearch__c.field-meta.xml
<CustomField>
    <fullName>ContractPartnerSearch__c</fullName>
    <label>Contract Partner (Search)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>