force-app/main/default/objects/Project__c/fields/CostCenterSegment__c.field-meta.xml
<CustomField>
    <fullName>CostCenterSegment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CostCenterSegment__c.SegmentType__c</field>
            <operation>equals</operation>
            <value>SegmentProject</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CostCenterSegment__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>