force-app/main/default/objects/Project__c/fields/CostsTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalAmountCHF__c</fullName>
    <formula>CostsTotalTimeCHF__c + CostsTotalExpenseCHF__c + CostsTotalSupplierCostsCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costs - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>