force-app/main/default/objects/Project__c/fields/CostsTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalExpenseCHF__c</fullName>
    <label>Costs - Total Expense (CHF)</label>
    <summarizedField>Package__c.CostsTotalExpenseCHF__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>