force-app/main/default/objects/Project__c/fields/CostsTotalTimeCHF__c.field-meta.xml
<CustomField>
    <fullName>CostsTotalTimeCHF__c</fullName>
    <label>Costs - Total Time (CHF)</label>
    <summarizedField>Package__c.CostsTotalTimeCHF__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>