force-app/main/default/objects/Project__c/fields/CurrencyRateToCHF__c.field-meta.xml
<CustomField>
    <fullName>CurrencyRateToCHF__c</fullName>
    <label>Currency Rate to CHF</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>