force-app/main/default/objects/Project__c/fields/CYSendEmailProjectStatusClosed__c.field-meta.xml
<CustomField>
    <fullName>CYSendEmailProjectStatusClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CY - Send Email Project Status Closed</label>
    <type>Checkbox</type>
</CustomField>