force-app/main/default/objects/Project__c/fields/DecForecast__c.field-meta.xml
<CustomField>
    <fullName>DecForecast__c</fullName>
    <label>Dec Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>