force-app/main/default/objects/Project__c/fields/DefaultInvoiceDescription__c.field-meta.xml
<CustomField>
    <fullName>DefaultInvoiceDescription__c</fullName>
    <inlineHelpText>Intro Information for the Invoice Template. Can be switched on/off by the checkbox.</inlineHelpText>
    <label>Default Invoice Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>