force-app/main/default/objects/Project__c/fields/DefaultInvoiceTitle__c.field-meta.xml
<CustomField>
    <fullName>DefaultInvoiceTitle__c</fullName>
    <inlineHelpText>Will be printed on the Invoice Template. Must contain the word &quot;Invoice&quot;.</inlineHelpText>
    <label>Default Invoice Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>