force-app/main/default/objects/Project__c/fields/ExpenseAllowancePercent__c.field-meta.xml
<CustomField>
    <fullName>ExpenseAllowancePercent__c</fullName>
    <defaultValue>0.06</defaultValue>
    <label>Expense Allowance %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>