force-app/main/default/objects/Project__c/fields/ExpenseDescription__c.field-meta.xml
<CustomField>
    <fullName>ExpenseDescription__c</fullName>
    <label>Expense Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>