force-app/main/default/objects/Project__c/fields/FebForecast__c.field-meta.xml
<CustomField>
    <fullName>FebForecast__c</fullName>
    <label>Feb Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>