force-app/main/default/objects/Project__c/fields/ILVForecast__c.field-meta.xml
<CustomField>
    <fullName>ILVForecast__c</fullName>
    <label>ILV Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>