force-app/main/default/objects/Project__c/fields/ILVForecastProject__c.field-meta.xml
<CustomField>
    <fullName>ILVForecastProject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ILV Forecast Project</label>
    <type>Checkbox</type>
</CustomField>