force-app/main/default/objects/Project__c/fields/InheritProjectResponsibleToPackages__c.field-meta.xml
<CustomField>
    <fullName>InheritProjectResponsibleToPackages__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>HR &amp; Sysadmin only: Package inherits the Project Responsible Business from Project.</inlineHelpText>
    <label>Inherit Project Responsible to Packages</label>
    <type>Checkbox</type>
</CustomField>