force-app/main/default/objects/Project__c/fields/InvoiceContact__c.field-meta.xml
<CustomField>
    <fullName>InvoiceContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the internal contact that is printed on the invoice with Name, Phone and Email for customer information.</inlineHelpText>
    <label>Invoice Contact (Internal)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Billing Responsible)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>