force-app/main/default/objects/Project__c/fields/InvoiceOpenToBudget__c.field-meta.xml
<CustomField>
    <fullName>InvoiceOpenToBudget__c</fullName>
    <formula>BudgetAssignTotalAmount__c - InvoiceTotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Open to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>