force-app/main/default/objects/Project__c/fields/InvoiceReceiver__c.field-meta.xml
<CustomField>
    <fullName>InvoiceReceiver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Receiver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Summary Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Invoice Receiver)</relationshipLabel>
    <relationshipName>ProjectsInvoiceReceiver</relationshipName>
    <type>Lookup</type>
</CustomField>