force-app/main/default/objects/Project__c/fields/InvoiceTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmount__c</fullName>
    <formula>InvoiceTotalTime__c +InvoiceTotalExpense__c+InvoiceTotalSupplierCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>