force-app/main/default/objects/Project__c/fields/InvoiceTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountCHF__c</fullName>
    <formula>InvoiceTotalTimeCHF__c + InvoiceTotalExpenseCHF__c + InvoiceTotalSupplierCostsCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>