force-app/main/default/objects/Project__c/fields/InvoiceTotalAmountNetCHFBP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalAmountNetCHFBP__c</fullName>
    <label>Invoice - Total Amount Net (CHF) BP</label>
    <summarizedField>Invoice__c.InvoiceTotalAmountNetCHF__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.IsInBillingPeriodYearMonth__c</field>
        <operation>equals</operation>
        <value>2026.4</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.InvoiceInvalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>